squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-metamethods-get_set.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/metamethods/get_set.nut (Generated by sq_expect.py)
---
With Tables:
false
Table _newslot called
true
New Slot
New Value
Table _delslot called
false

With Classes:
false
Table _newslot called
true
Table _get called
New Slot
Table _set called
Table _get called
New Value
Table _delslot called
false
