squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-metamethods-misc.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/metamethods/misc.nut (Generated by sq_expect.py)
---
With Tables:
a: customTableStringed
Other: (table : 0x<memory>)
Table _call called (true)
Table _cloned called (customTableStringed)
Table _typeof called
customTable
Loop:
Calling _call with args:
Table _call called with args (1, 2, 3)

With Classes:
b: customClassStringed
Class _call called (true)
Class _cloned called (customClassStringed)
Class _typeof called
customClass
Loop:
Table _nexti called (null)
0
Table _nexti called (data)
1
Table _nexti called (data)
2
Table _nexti called (data)
3
Table _nexti called (data)
4
Table _nexti called (data)
Calling _call with args:
Class _call called with args (1, 2, 3)
