squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-statements-loops.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/statements/loops.nut (Generated by sq_expect.py)
---
2.4.3 Loops
2.4.3.1 For Loop
 - For loop with inline local index
0 1 2 3 4 
 - For loop with env index
0 1 2 3 4 
 - Infinite For loop with break
0 1 2 3 4 5 
2.4.3.2 Foreach Loop
 - Foreach loop over array with index
index=0 value=10
index=1 value=23
index=2 value=33
index=3 value=41
index=4 value=589
index=5 value=56
 - Foreach loop over array
value=10
value=23
value=33
value=41
value=589
value=56
 - Foreach loop over object
value=0.4001
value=10
value=b
 - Foreach loop over object with key
key=0 KEY value=0 VAL
key=1 KEY value=1 VAL
key=10 KEY value=10 VAL
key=2 KEY value=2 VAL
key=3 KEY value=3 VAL
key=4 KEY value=4 VAL
key=5 KEY value=5 VAL
key=6 KEY value=6 VAL
key=7 KEY value=7 VAL
key=8 KEY value=8 VAL
key=9 KEY value=9 VAL
