squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-tables.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/tables.nut (Generated by sq_expect.py)
---
