squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-values_and_data_types-array.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/values_and_data_types/array.nut (Generated by sq_expect.py)
---
I'm array
null
array
