squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-values_and_data_types-integer.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/values_and_data_types/integer.nut (Generated by sq_expect.py)
---
123
18
61
119
true
false
null
141
105
2214
6
1
2
-1
-2
-1
-2
1
2
