squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-values_and_data_types-string.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/values_and_data_types/string.nut (Generated by sq_expect.py)
---
	







\
"
'
f
g
g
I'm a wonderful string

I'm a verbatim string\n

    this is a multiline string
    it will "embed" all the new line
    characters

