squirrel_lang/src/runtime/snapshots/squirrel_lang__runtime__walker__tests__walker-verify-values_and_data_types-table.nut.snap
---
source: squirrel_lang/src/runtime/walker.rs
expression: Walker test for verify/values_and_data_types/table.nut (Generated by sq_expect.py)
---
(table : 0x
(table : 0x
10
11
